--- a/change.html
+++ b/change.html
@@ -20,7 +20,6 @@
                 <label for="old password">Old Password:</label>
                 <input type="text" id="old Password" name="old Password" required
                     placeholder="Your Old Password Please....">
-                <ion-icon name="lock-closed-outline"></ion-icon>
             </div>
 
             <!--new password-->
@@ -29,7 +28,6 @@
                 <label for="new password">New Password:</label>
                 <input type="text" id="new password" name="new password" required
                     placeholder="Your New Password Please.... ">
-                <ion-icon name="lock-closed-outline"></ion-icon>
             </div>
 
             <!--confirm password-->
@@ -37,18 +35,15 @@
                 <label for="confirm_password">Confirm Password:</label>
                 <input type="text" id="confirmpassword" name="confirmpassword" required
                     placeholder="Confirm your Password Please...... ">
-                <ion-icon name="lock-closed-outline"></ion-icon>
             </div>
 
 
             <!-- Submit Button -->
             <div class="button">
-                <button type="submit" class="btn">Submit</button>
+                <button type="submit" class="btn">Save New Password</button>
             </div>
         </div>
     </div>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
+    </body>
 
 </html>
