--- a/news-letter.html
+++ b/news-letter.html
@@ -7,6 +7,7 @@
 
 		<!-- main css file -->
 		<link rel="stylesheet" href="css/news-letter.css" />
+		<link rel="stylesheet" href="css/header.css" />
 
 		<!-- normalize file  -->
 		<link rel="stylesheet" href="css/normalize.css" />
@@ -20,14 +21,43 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
 			rel="stylesheet" />
-		<title>Hend Abdelfattah's Pharmacy</title>
+		<link rel="icon" href="imgs/Nav-logo.png" type="image/x-icon">
+		<title>News-letter</title>
 	</head>
 <body>
-    
-<!-- News-letter start  -->
+    <!-- header start  -->
+		<header>
+			<div class="container">
+				<a href="#">
+					<img src="imgs/Nav-logo.png" alt="logo" />
+				</a>
+                <pc class="header-logo">Hend Abdelfattah</pc>
+				<nav>
+					<i class="fas fa-bars toggle"></i>
+					<ul>
+						<li><a target="_blank" class="active" href="index.html">Home</a></li>
+						<li><a target="_blank" href="Products.html">Products</a>
+						<li><a target="_blank" href="contact-us.html">Contact Us</a></li>
+						<li><a target="_blank" href="news-letter.html">News-letter</a></li>
+						<li><a target="_blank" href="advice.html">Advices</a></li>
+						<li><a target="_blank" href="login.html">Login</a></li>
+						<li><a target="_blank" href="change.html">Change Password</a></li>
+						<li><a target="_blank" href="register.html">Sign Up</a></li>
+						<li><a target="_blank" href="about-us.html">About Us</a></li>
+					</ul>
+					<div class="form">
+						<i class="fa-solid fa-magnifying-glass"></i>
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</div>
+				</nav>
+			</div>
+		</header>
+		<!-- header end  -->
+
+		<!-- News-letter start  -->
 		<div class="News-letter" id="News-letter">
 			<div class="container">
-				<h2 class="special-heading">News Letter</h2>
+				<h2 class="News-letter-special-heading">News Letter</h2>
 				<p>Take Advices from experts</p>
 				<div class="News-letter-content">
 					<div class="card">
@@ -67,7 +97,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="imgs/med5.jpeg" alt="alt" />
+						<img src="imgs/med13.jpeg" alt="alt" />
 						<div class="info">
 							<h3>Body Magic</h3>
 							<p>
@@ -124,5 +154,7 @@
 			</div>
 		</div>
 		<!-- News-letter  -->
+
+		
 
 </body>
