--- a/about-us.html
+++ b/about-us.html
@@ -8,20 +8,51 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
 		<!-- Main Template CSS File -->
 		<link rel="stylesheet" href="css/about-us.css" />
+		<link rel="stylesheet" href="css/header.css" />
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&#038;display=swap"
 			rel="stylesheet" />
+			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+	<link rel="icon" href="imgs/Nav-logo.png" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hend Abdelfattah's Pharmacy</title>
 	</head>
 	<body>
+		<!-- header start  -->
+		<header>
+			<div class="container">
+				<a href="#">
+					<img src="imgs/Nav-logo.png" alt="logo" />
+				</a>
+                <pc class="header-logo">Hend Abdelfattah</pc>
+				<nav>
+					<i class="fas fa-bars toggle"></i>
+					<ul>
+						<li><a target="_blank" class="active" href="index.html">Home</a></li>
+						<li><a target="_blank" href="Products.html">Products</a>
+						<li><a target="_blank" href="contact-us.html">Contact Us</a></li>
+						<li><a target="_blank" href="news-letter.html">News-letter</a></li>
+						<li><a target="_blank" href="advice.html">Advices</a></li>
+						<li><a target="_blank" href="login.html">Login</a></li>
+						<li><a target="_blank" href="change.html">Change Password</a></li>
+						<li><a target="_blank" href="register.html">Sign Up</a></li>
+						<li><a target="_blank" href="about-us.html">About Us</a></li>
+					</ul>
+					<div class="form">
+						<i class="fa-solid fa-magnifying-glass"></i>
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</div>
+				</nav>
+			</div>
+		</header>
+		<!-- header end  -->
 		
 		<!-- about start  -->
 		<div class="about" id="about">
 			<div class="container">
-				<h2 class="special-heading">About Us</h2>
+				<h2 class="aboout-us-special-heading">About Us</h2>
 				<p>We Care For Your Health</p>
 				<div class="about-content">
 					<div class="image">
@@ -40,4 +71,20 @@
 			</div>
 		</div>
 		<!-- about end  -->
+
+		<!-- FOOTER -->
+		<footer>
+			<div class="container">
+				<img src="imgs/Nav-logo.png" alt="logo" />
+				<p>we are 24/7 in business , keeping you safe  </p>
+				<div class="social-icons">
+					<i class="fab fa-facebook-f"></i>
+					<i class="fab fa-twitter"></i>
+					<i class="fas fa-home"></i>
+					<i class="fab fa-linkedin"></i>
+				</div>
+				<p class="copyright">© 2025 <span>Hend Abdelfattah's Pharmacy</span> All Right Reserved</p>
+			</div>
+		</footer>
+		
 	</body>
