--- a/contact-us.html
+++ b/contact-us.html
@@ -8,21 +8,53 @@
 		<link rel="stylesheet" href="css/all.min.css" />
 		<!-- Main Template CSS File -->
 		<link rel="stylesheet" href="css/contact-us.css" />
+		<link rel="stylesheet" href="css/header.css" />
+
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&#038;display=swap"
 			rel="stylesheet" />
+			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+	<link rel="icon" href="imgs/Nav-logo.png" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Kasper | Template Two</title>
+		<title>Contact Us</title>
 	</head>
 
 <body>
         
-<!-- contact-us start  -->
+	<!-- header start  -->
+	<header>
+		<div class="container">
+			<a href="#">
+				<img src="imgs/Nav-logo.png" alt="logo" />
+			</a>
+			<pc class="header-logo">Hend Abdelfattah</pc>
+			<nav>
+				<i class="fas fa-bars toggle"></i>
+				<ul style="	color: white;">
+					<li><a target="_blank" class="active" href="index.html">Home</a></li>
+					<li><a target="_blank" href="Products.html">Products</a>
+					<li><a target="_blank" href="contact-us.html">Contact Us</a></li>
+					<li><a target="_blank" href="news-letter.html">News-letter</a></li>
+					<li><a target="_blank" href="advice.html">Advices</a></li>
+					<li><a target="_blank" href="login.html">Login</a></li>
+					<li><a target="_blank" href="change.html">Change Password</a></li>
+					<li><a target="_blank" href="register.html">Sign Up</a></li>
+					<li><a target="_blank" href="about-us.html">About Us</a></li>
+				</ul>
+				<div class="form">
+					<i class="fa-solid fa-magnifying-glass"></i>
+					<i class="fa-solid fa-magnifying-glass"></i>
+				</div>
+			</nav>
+		</div>
+	</header>
+	<!-- header end  -->
+        <!-- contact-us start  -->
 		<div class="contact padding">
 			<div class="container">
-				<div class="special-heading">
+				<div class="contact-us-special-heading">
 					<h2>contact us</h2>
 					<p>in your Service 24 Hours, 7 Days a Week</p>
 				</div>
@@ -58,4 +90,20 @@
 			</div>
 		</div>
 		<!-- contact-us end  -->
+
+		<!-- FOOTER -->
+		<footer>
+			<div class="container">
+				<img src="imgs/Nav-logo.png" alt="logo" />
+				<p>we are 24/7 in business , keeping you safe  </p>
+				<div class="social-icons">
+					<i class="fab fa-facebook-f"></i>
+					<i class="fab fa-twitter"></i>
+					<i class="fas fa-home"></i>
+					<i class="fab fa-linkedin"></i>
+				</div>
+				<p class="copyright">© 2025 <span>Hend Abdelfattah's Pharmacy</span> All Right Reserved</p>
+			</div>
+		</footer>
+		
 </body>
