--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <div class="input-box">
                 <div class="icon"></div>
                 <label for="Email">Email:</label>
-                <input type="email" id="email" name="email" required placeholder="Your Email Please....">
+                <input class="margin" type="email" id="email" name="email" required placeholder="Your Email Please....">
                 <ion-icon name="mail-outline"></ion-icon>
             </div>
 
@@ -48,6 +48,7 @@
         <!-- icons source-->
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 
 </html>
