--- a/register.html
+++ b/register.html
@@ -37,10 +37,11 @@
 
         <!-- Gender-->
         <div class="gender-selection">
-          <label for="gender"> gender</label>
+          <label for="gender">Gender</label>
           <select name="gender " id="gender">
-            <option value="male">male</option>
-            <option value="female"> female</option>
+            <option value="please select"> - - Please Select - -</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
           </select>
           <!-- Submit Button -->
           <div class="button">
