--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<i class="fas fa-bars toggle"></i>
 					<ul>
 						<li><a target="_blank" class="active" href="index.html">Home</a></li>
-						<li><a target="_blank" href="Products.html">Products</a>
+						<li><a target="_blank" href="products.html">Products</a>
 						<li><a target="_blank" href="contact-us.html">Contact Us</a></li>
 						<li><a target="_blank" href="news-letter.html">News-letter</a></li>
 						<li><a target="_blank" href="advice.html">Advices</a></li>
